Página de Usuário (quase finalizada)

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
   <head>
+    <meta charSet='UTF-8' />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name='robots' content='noindex, nofollow' />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins" rel="stylesheet" />
     <meta charset="utf-8" />
     <title>TrocaWeb</title>
   </head>
